hydroflow/tests/compile-fail/surface_demuxenum_wrongenum.stderr
error[E0277]: the trait bound `std::option::Option<()>: DemuxEnumItems` is not satisfied
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:17:28
   |
17 |         ]) -> demux_enum::<Option<()>>();
   |                            ^^^^^^^^^^ the trait `DemuxEnumItems` is not implemented for `std::option::Option<()>`
   |
   = help: the trait `DemuxEnumItems` is implemented for `Shape`
note: required by a bound in `check_impl_demux_enum`
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:12:18
   |
12 |       let mut df = hydroflow_syntax! {
   |  __________________^
13 | |         my_demux = source_iter([
14 | |             Shape::Rectangle { w: 10.0, h: 8.0 },
15 | |             Shape::Square(9.0),
...  |
20 | |         my_demux[Square] -> for_each(std::mem::drop);
21 | |     };
   | |_____^ required by this bound in `check_impl_demux_enum`
   = note: this error originates in the macro `hydroflow_syntax` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no variant named `Circle` found for enum `std::option::Option<()>`
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:19:18
   |
19 |         my_demux[Circle] -> for_each(std::mem::drop);
   |                  ^^^^^^ variant not found in `std::option::Option<()>`

error[E0599]: no variant named `Rectangle` found for enum `std::option::Option<()>`
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:18:18
   |
18 |         my_demux[Rectangle] -> for_each(std::mem::drop);
   |                  ^^^^^^^^^ variant not found in `std::option::Option<()>`

error[E0599]: no variant named `Square` found for enum `std::option::Option<()>`
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:20:18
   |
20 |         my_demux[Square] -> for_each(std::mem::drop);
   |                  ^^^^^^ variant not found in `std::option::Option<()>`

error[E0277]: the trait bound `std::option::Option<()>: DemuxEnumItems` is not satisfied
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:17:15
   |
17 |         ]) -> demux_enum::<Option<()>>();
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `DemuxEnumItems` is not implemented for `std::option::Option<()>`
   |
   = help: the trait `DemuxEnumItems` is implemented for `Shape`

error[E0277]: the trait bound `std::option::Option<()>: DemuxEnum<_>` is not satisfied
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:17:28
   |
17 |         ]) -> demux_enum::<Option<()>>();
   |                            ^^^^^^^^^^ the trait `DemuxEnum<_>` is not implemented for `std::option::Option<()>`
   |
   = help: the trait `DemuxEnum<(__PusheratorCircle, (__PusheratorRectangle, (__PusheratorSquare, ())))>` is implemented for `Shape`
note: required by a bound in `__typeguard_demux_enum_fn`
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:12:18
   |
12 |       let mut df = hydroflow_syntax! {
   |  __________________^
13 | |         my_demux = source_iter([
14 | |             Shape::Rectangle { w: 10.0, h: 8.0 },
15 | |             Shape::Square(9.0),
...  |
20 | |         my_demux[Square] -> for_each(std::mem::drop);
21 | |     };
   | |_____^ required by this bound in `__typeguard_demux_enum_fn`
   = note: this error originates in the macro `hydroflow_syntax` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::option::Option<()>: DemuxEnum<(impl Pusherator<Item = _>, (impl Pusherator<Item = _>, (impl Pusherator<Item = _>, ())))>` is not satisfied
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:17:15
   |
17 |         ]) -> demux_enum::<Option<()>>();
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `DemuxEnum<(impl Pusherator<Item = _>, (impl Pusherator<Item = _>, (impl Pusherator<Item = _>, ())))>` is not implemented for `std::option::Option<()>`
   |
   = help: the trait `DemuxEnum<(__PusheratorCircle, (__PusheratorRectangle, (__PusheratorSquare, ())))>` is implemented for `Shape`
note: required by a bound in `__typeguard_demux_enum_fn`
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:12:18
   |
12 |       let mut df = hydroflow_syntax! {
   |  __________________^
13 | |         my_demux = source_iter([
14 | |             Shape::Rectangle { w: 10.0, h: 8.0 },
15 | |             Shape::Square(9.0),
...  |
20 | |         my_demux[Square] -> for_each(std::mem::drop);
21 | |     };
   | |_____^ required by this bound in `__typeguard_demux_enum_fn`
   = note: this error originates in the macro `hydroflow_syntax` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<impl Pusherator<Item = Option<()>> as Pusherator>::Item == Shape`
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:17:15
   |
13 |           my_demux = source_iter([
   |  ____________________-
14 | |             Shape::Rectangle { w: 10.0, h: 8.0 },
15 | |             Shape::Square(9.0),
16 | |             Shape::Circle { r: 5.0 },
17 | |         ]) -> demux_enum::<Option<()>>();
   | |               ^^^^^^^^^^^^^^^^^^^^^^^^^-
   | |_______________|________________________|
   |                 |                        required by a bound introduced by this call
   |                 expected `Shape`, found `Option<()>`
   |
   = note: expected enum `Shape`
              found enum `std::option::Option<()>`
note: required by a bound in `pivot_run_sg_1v1`
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:13:20
   |
13 |           my_demux = source_iter([
   |  ____________________^
14 | |             Shape::Rectangle { w: 10.0, h: 8.0 },
15 | |             Shape::Square(9.0),
16 | |             Shape::Circle { r: 5.0 },
17 | |         ]) -> demux_enum::<Option<()>>();
   | |________________________________________^ required by this bound in `pivot_run_sg_1v1`

error[E0277]: the trait bound `std::option::Option<()>: DemuxEnum<(impl Pusherator<Item = _>, (impl Pusherator<Item = _>, (impl Pusherator<Item = _>, ())))>` is not satisfied
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:13:20
   |
13 |           my_demux = source_iter([
   |  ____________________^
14 | |             Shape::Rectangle { w: 10.0, h: 8.0 },
15 | |             Shape::Square(9.0),
16 | |             Shape::Circle { r: 5.0 },
17 | |         ]) -> demux_enum::<Option<()>>();
   | |________________________________________^ the trait `DemuxEnum<(impl Pusherator<Item = _>, (impl Pusherator<Item = _>, (impl Pusherator<Item = _>, ())))>` is not implemented for `std::option::Option<()>`
   |
   = help: the trait `DemuxEnum<(__PusheratorCircle, (__PusheratorRectangle, (__PusheratorSquare, ())))>` is implemented for `Shape`
note: required by a bound in `__typeguard_demux_enum_fn`
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:12:18
   |
12 |       let mut df = hydroflow_syntax! {
   |  __________________^
13 | |         my_demux = source_iter([
14 | |             Shape::Rectangle { w: 10.0, h: 8.0 },
15 | |             Shape::Square(9.0),
...  |
20 | |         my_demux[Square] -> for_each(std::mem::drop);
21 | |     };
   | |_____^ required by this bound in `__typeguard_demux_enum_fn`
   = note: this error originates in the macro `hydroflow_syntax` (in Nightly builds, run with -Z macro-backtrace for more info)
